# karpathy-wiki

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
examples/experimental-wiki-starter/: AGENTS.md  README.md
examples/feedback/: software-2-nanogpt-llmc.json
raw/sources/: char-rnn-readme.md  cognee-resources.md  convnetjs-readme.md  cs231n-course.md  cs231n-notes.md  deep-rl-pong.md  hacker-guide-neural-networks.md  karpathy-blog-index.md  karpathy-homepage.md  karpathy-wiki-operating-schema.md  llm-c-readme.md  llm-wiki-gist.md  llm-wiki.md  makemore-readme.md  micrograd-readme.md  mingpt-readme.md  nanochat-readme.md  nanogpt-readme.md  neuraltalk2-readme.md  public-corpus.md  rnn-effectiveness.md  software-2-0-essay.md  training-nn-recipe.md
scripts/: create_wiki_project.py  export_cognee_graph.py  improve.py  ingest.py  ingest_public_corpus.py  lint_wiki.py  query.py  wiki_common.py  wiki_server.py
skills/critic/: SKILL.md
skills/linter/: SKILL.md
skills/query-answerer/: SKILL.md
skills/source-ingestor/: SKILL.md
skills/wiki-writer/: SKILL.md
src/: cognee-graph.json  main.tsx  site-config.ts  styles.css
wiki/: generate-your-own-wiki.md  how-to-use.md  index.md  log.md  timeline.md
wiki/concepts/: agents.md  education.md  llm-wiki.md  neural-networks.md  software-2-0.md
wiki/people/: andrej-karpathy.md
wiki/projects/: cs231n.md  llm-c.md  mingpt.md  nanogpt.md
wiki/source-notes/: char-rnn-readme.md  cognee-resources.md  convnetjs-readme.md  cs231n-course.md  cs231n-notes.md  (+18 more)
(+5 files in other folders)
